<resources>
    <string name="app_name">CFHW Resources</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Center For Healthy Work</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="emergency_hotlines">Emergency Hotlines</string>
    <string name="legal_assistance">Legal Assistance</string>
    <string name="worker_centers">Worker Centers</string>
    <string name="advocacy_organizations">Advocacy Organizations</string>
    <string name="government_organizations">Government Organizations</string>
    <string name="employment_training_and_workforce_development">Employment Training And Workforce Development</string>
    <string name="community_services">Community Services</string>
    <string name="health_centers">Health Centers</string>
    <string name="comprehensive">Comprehensive</string>
    <string name="psychological_health_and_counseling">Psychological Health And Counseling</string>
    <string name="domestic_abuse_and_sexual_assault">Domestic Abuse And Sexual Assault</string>
    <string name="food_pantries">Food Pantries</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="immigration">Immigration</string>
    <string name="housing">Housing</string>
    <string name="services">Services</string>
    <string name="health">Health</string>
</resources>
